Adding scala and apache spark dependency